css/style.css
:root {
	--dark-gray: #4d4d4d;
	--light-gray: #d8dee9;
	--operator-button: #ebcb8b;
	--remove-button: #bf616a;
	--equal-button: #a3be8c;
}

html {
	font-family: "Montserrat", sans-serif;
}

body {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: var(--dark-gray);
}

#calculator {
	margin-top: 3%;
	width: 300px;
	height: 430px;
	display: grid;
	grid-template-areas:
		"display display display display"
		"clear clear delete delete"
		"seven eight nine divide"
		"four five six multiply"
		"one two three substract"
		"zero dot equal add";
	grid-template-columns: repeat(4, 1fr);
	grid-template-rows: repeat(6, 1fr);
	gap: 15px;
	padding: 30px;
	border-radius: 19px;
	background: var(--dark-gray);
	box-shadow: 13px 13px 23px #343434, -13px -13px 23px #666666;
}

#credit {
	font-size: 0.9rem;
	color: var(--light-gray);
	margin-top: 20px;
}

#social-links {
	font-size: 2.4rem;
	color: var(--light-gray);
}

#social-links a {
	text-decoration: none !important;
	color: inherit;
	margin: 0 10px 0 10px;
}

.button {
	border-style: none;
	font-family: "Montserrat", sans-serif;
	font-size: 1.4rem;
	color: var(--light-gray);
	transition: 0.4s;
	border-radius: 10px;
	background: var(--dark-gray);
	box-shadow: 5px 5px 11px #3a3a3a, -5px -5px 11px #606060;
}

.button:active {
	border-radius: 10px;
	background: var(--dark-gray);
	box-shadow: inset 5px 5px 11px #3a3a3a, inset -5px -5px 11px #606060;
}

#display {
	height: 5.5rem;
	grid-area: display;
	color: var(--light-gray);
	text-align: right;
	font-size: 2.3rem;
	padding: 1rem;
	border-radius: 10px;
	background: var(--dark-gray);
	box-shadow: inset 8px 8px 16px #313131, inset -8px -8px 16px #696969;
}

#main-display {
	margin: 0.2rem;
	font-size: 2.4rem;
}

#second-display {
	margin: 0.2rem;
	font-size: 1.3rem;
}

#clear {
	grid-area: clear;
	color: var(--remove-button);
}

#delete {
	grid-area: delete;
	color: var(--remove-button);
}

#div {
	grid-area: divide;
	color: var(--operator-button);
}

#mul {
	grid-area: multiply;
	color: var(--operator-button);
}

#sub {
	grid-area: substract;
	color: var(--operator-button);
}

#add {
	grid-area: add;
	color: var(--operator-button);
}

#equal {
	grid-area: equal;
	color: var(--equal-button);
}

